Align padding of header and items in tum-live-menu (fix #1306)

--- a/web/assets/css/home.css
+++ b/web/assets/css/home.css
@@ -218,7 +218,7 @@
 }
 
 .tum-live-menu .tum-live-menu-item {
-    @apply flex items-center p-2 hover:bg-gray-100 dark:hover:bg-gray-800 my-2 w-full
+    @apply flex items-center py-2 px-4 hover:bg-gray-100 dark:hover:bg-gray-800 my-2 w-full
 }
 
 .tum-live-menu .tum-live-menu-item.active {
